# mcp-google-adwords

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  get_refresh_token.py  pyproject.toml
src/google_ads_mcp/: client.py  config.py  formatters.py  models.py  server.py
tests/: test_client.py  test_config.py  test_server.py
